// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AlertMessage error matches snapshot 1`] = `
<div
  className="ebxlRt"
>
  <div
    className="fFxuom"
    type="error"
  />
  <div
    className="bwRksd"
  >
    <div
      className="etuWhZ"
    >
      <strong>
         
      </strong>
      <span />
      <div>
        This is a message
      </div>
    </div>
  </div>
  <div
    className="ipGZxu"
  />
</div>
`;

exports[`AlertMessage healthy matches snapshot 1`] = `
<div
  className="ebxlRt"
>
  <div
    className="iBcrDo"
    type="healthy"
  />
  <div
    className="bwRksd"
  >
    <div
      className="etuWhZ"
    >
      <strong>
         
      </strong>
      <span />
      <div>
        This is a message
      </div>
    </div>
  </div>
  <div
    className="ipGZxu"
  />
</div>
`;

exports[`AlertMessage hidden - matches snapshot 1`] = `
<div
  className="hkbWnA"
>
  <div
    className="lgYmRs"
    type="important"
  />
  <div
    className="bwRksd"
  >
    <div
      className="etuWhZ"
    >
      <strong>
         
      </strong>
      <span />
      <div />
    </div>
  </div>
  <div
    className="ipGZxu"
  />
</div>
`;

exports[`AlertMessage important matches snapshot 1`] = `
<div
  className="ebxlRt"
>
  <div
    className="lgYmRs"
    type="important"
  />
  <div
    className="bwRksd"
  >
    <div
      className="etuWhZ"
    >
      <strong>
         
      </strong>
      <span />
      <div>
        This is a message
      </div>
    </div>
  </div>
  <div
    className="ipGZxu"
  />
</div>
`;

exports[`AlertMessage information matches snapshot 1`] = `
<div
  className="ebxlRt"
>
  <div
    className="lhPWtr"
    type="information"
  />
  <div
    className="bwRksd"
  >
    <div
      className="etuWhZ"
    >
      <strong>
         
      </strong>
      <span />
      <div>
        This is a message
      </div>
    </div>
  </div>
  <div
    className="ipGZxu"
  />
</div>
`;

exports[`AlertMessage matches snapshot 1`] = `
<div
  className="ebxlRt"
>
  <div
    className="lgYmRs"
    type="important"
  />
  <div
    className="bwRksd"
  >
    <div
      className="etuWhZ"
    >
      <strong>
         
      </strong>
      <span />
      <div />
    </div>
  </div>
  <div
    className="ipGZxu"
  />
</div>
`;

exports[`AlertMessage success matches snapshot 1`] = `
<div
  className="ebxlRt"
>
  <div
    className="EfQEb"
    type="success"
  />
  <div
    className="bwRksd"
  >
    <div
      className="etuWhZ"
    >
      <strong>
         
      </strong>
      <span />
      <div>
        This is a message
      </div>
    </div>
  </div>
  <div
    className="ipGZxu"
  />
</div>
`;

exports[`AlertMessage warning matches snapshot 1`] = `
<div
  className="ebxlRt"
>
  <div
    className="kZaSPE"
    type="warning"
  />
  <div
    className="bwRksd"
  >
    <div
      className="etuWhZ"
    >
      <strong>
         
      </strong>
      <span />
      <div>
        This is a message
      </div>
    </div>
  </div>
  <div
    className="ipGZxu"
  />
</div>
`;
